[package]
name = "rfd_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7.3", features = ["edge"] }
raw-window-handle = "0.6"

gtk-sys = { version = "0.18.0" }
glib-sys = { version = "0.18.0"}
gobject-sys = { version = "0.18.0"}